[Java] Got for more direct method for CRC on Java 11 first.